Test Front and Complete Sync